# fourier_feature_pinn

./: 01_baseline_hybrid_pinn.ipynb  02_fourier_feature_pinn.ipynb  README.md  pyproject.toml
