[project]
name = "fourier-feature-pinn"
author = "Mei-Chin Pang"
version = "1.0.0"
description = """\
    How Do You Train a PINN When the Data Is Noisy, Sparse, or Missing? \
    A Fourier Feature PINN with Curriculum Training for a Damped Pendulum"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "notebook>=7.5.7",
]
